<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_bmi"
            android:title="BMI CALCULATOR" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_journal"
            android:icon="@drawable/ic_journal"
            android:title="@string/menu_journal" />
        <item
            android:id="@+id/nav_act"
            android:icon="@drawable/ic_activity"
            android:title="@string/menu_act" />
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_today"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_target"
            android:icon="@drawable/ic_target"
            android:title="@string/menu_target" />
    </group>
</menu>